# nr-ibsr

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  build-export.sh  build.sh  deploy.sh  docker-compose.integration.yml  docker-compose.yml  prompt.md  test.sh
.claude/: settings.local.json
.claude/agents/: coverage-validator.md
.github/workflows/: ci.yml  release.yml
docs/: CF-INCIDENT-RECORDING-DESIGN-V1.md  _config.yml  configuration.md  deployment.md  faq.md  how-it-works.md  index.md  install.md  installation.md  operations.md  quickstart.md  record-incident.md  reporting.md  s3-upload.md  safety.md  stage-b-status.md  tldr.md  upgrading.md  wtf.md
docs/examples/: README.md  ibsr-logrotate  ibsr.service  report.md
fixtures/: README.md
fixtures/allowlisted_attacker/: allowlist.txt  scenario.json
fixtures/allowlisted_attacker/expected/: evidence.csv  report.md  rules.json
fixtures/allowlisted_attacker/snapshots/: 1000.jsonl
fixtures/boundary_conditions/: config.json  scenario.json
fixtures/boundary_conditions/expected/: evidence.csv  report.md  rules.json
fixtures/boundary_conditions/snapshots/: 1000.jsonl
fixtures/fp_unknown/: config.json  scenario.json
fixtures/fp_unknown/expected/: evidence.csv  report.md  rules.json
fixtures/fp_unknown/snapshots/: 1000.jsonl
fixtures/legitimate_client/: config.json  scenario.json
fixtures/legitimate_client/expected/: evidence.csv  report.md  rules.json
fixtures/legitimate_client/snapshots/: 1000.jsonl
fixtures/syn_churn_attacker/: scenario.json
fixtures/syn_churn_attacker/expected/: evidence.csv  report.md  rules.json
fixtures/syn_churn_attacker/snapshots/: 1000.jsonl
ibsr-bpf/: Cargo.toml  build.rs
ibsr-bpf/src/: bpf_reader.rs  lib.rs  map_reader.rs  record_incident_event.rs  record_incident_loader.rs  safety.rs  tc_payload_event.rs  tc_payload_loader.rs  xdp_dispatcher.rs
ibsr-bpf/src/bpf/: counter.bpf.c  record_incident.bpf.c  tc_payload.bpf.c
ibsr-clock/: Cargo.toml
ibsr-clock/src/: lib.rs
ibsr-collector/: Cargo.toml  build.rs
ibsr-collector/src/: archive.rs  cli.rs  collector.rs  exit.rs  host_telemetry.rs  lib.rs  logger.rs  main.rs  payload.rs  payload_collector.rs  pcap.rs  scrub.rs  signal.rs  sleeper.rs  trigger_socket.rs
ibsr-collector/src/commands/: collect.rs  collect_payload.rs  mod.rs  record_incident.rs  report.rs  run.rs
ibsr-collector/src/io/: allowlist_loader.rs  mod.rs  output_writer.rs  status_writer.rs
ibsr-conformance/: Cargo.toml
ibsr-conformance/src/: lib.rs  loader.rs  runner.rs  types.rs
ibsr-export/: Cargo.toml  Dockerfile
ibsr-export/src/: cli.rs  content_type.rs  error.rs  file_selector.rs  lib.rs  manifest.rs  metadata.rs  presign.rs  upload.rs
ibsr-export/tests/: integration.rs
ibsr-fs/: Cargo.toml
ibsr-fs/src/: lib.rs  rotation.rs  writer.rs
ibsr-reporter/: Cargo.toml
ibsr-reporter/src/: config.rs  counterfactual.rs  decision.rs  ingest.rs  lib.rs  report.rs  rules.rs  types.rs  window.rs
ibsr-schema/: Cargo.toml
ibsr-schema/src/: lib.rs  snapshot.rs
offline-tools/: Cargo.toml
offline-tools/ibsr-conformance/: Cargo.toml
offline-tools/ibsr-conformance/src/: loader.rs  runner.rs
offline-tools/ibsr-reporter/: Cargo.toml
offline-tools/ibsr-reporter/src/: abuse.rs  config.rs  counterfactual.rs  decision.rs  episode.rs  ingest.rs  lib.rs  report.rs  rules.rs  summary.rs  types.rs  window.rs
