[workspace]
resolver = "2"
members = [
    "ibsr-schema",
    "ibsr-clock",
    "ibsr-fs",
    "ibsr-bpf",
    "ibsr-collector",
]
exclude = ["offline-tools"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nullrabbit/nr-ibsr"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
libbpf-rs = "0.24"
chrono = "0.4"
