[package]
name = "ibsr-bpf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "XDP/BPF loader for IBSR"

[dependencies]
thiserror.workspace = true
object = { version = "0.36", features = ["write"] }
regex = "1.10"
ibsr-schema = { path = "../ibsr-schema" }
ibsr-clock = { path = "../ibsr-clock" }
libbpf-rs.workspace = true

[dev-dependencies]
