[package]
name = "ibsr-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBSR XDP collector CLI"

[[bin]]
name = "ibsr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ibsr-bpf = { path = "../ibsr-bpf" }
ibsr-clock = { path = "../ibsr-clock" }
ibsr-fs = { path = "../ibsr-fs" }
ibsr-schema = { path = "../ibsr-schema" }

[dev-dependencies]
