[package]
name = "ibsr-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IBSR XDP collector CLI"

[[bin]]
name = "ibsr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ibsr-bpf = { path = "../ibsr-bpf" }
ibsr-clock = { path = "../ibsr-clock" }
ibsr-fs = { path = "../ibsr-fs" }
ibsr-schema = { path = "../ibsr-schema" }
# Userspace HTTP parser for ShadowPayload-mode TCP-stream reassembly.
# Memory-safe, no_std-friendly, parses HTTP/1.x request + response heads
# and reports body byte length via Content-Length / chunked transfer.
httparse = "1.9"
# Used by record-incident's compute_boot_anchor_now: clock_gettime
# (CLOCK_MONOTONIC) to translate kernel ktime → wall-clock for pcap
# timestamps.
nix = { version = "0.30", features = ["time"] }
# gzip for record-incident's warm-tier archive sweeper.
flate2 = "1.1"

[dev-dependencies]
