[package]
name = "ibsr-export"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/NullRabbitLabs/nr-ibsr"
description = "Upload IBSR report artefacts to S3 or S3-compatible storage"

[[bin]]
name = "ibsr-export"
path = "src/bin/export.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

# Async runtime (required by AWS SDK)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync"] }

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.65"

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Glob patterns
glob = "0.3"

# Hostname detection
hostname = "0.4"

# Duration parsing (e.g., "7d", "24h")
humantime = "2.1"

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
integration = []
