[package]
name = "ibsr-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem abstraction for IBSR"

[dependencies]
thiserror.workspace = true
chrono.workspace = true
ibsr-schema = { path = "../ibsr-schema" }
ibsr-clock = { path = "../ibsr-clock" }

[dev-dependencies]
tempfile = "3.10"
