[package]
name = "ibsr-reporter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ibsr-schema = { path = "../../ibsr-schema" }
ibsr-fs = { path = "../../ibsr-fs" }
ibsr-clock = { path = "../../ibsr-clock" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
